namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    
    public class BlackOlives:IVeggies
    {
       public override string  ToString()
        {
            return "Black Olives";
        }	
    }
}