namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class Eggplant : IVeggies
    {
        public override string ToString()
        {
            return "Eggplant";
        }
    }
}