namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class FreshClams : IClams
    {
        public override string ToString()
        {
            return "Fresh Clams from Long Island Sound";
        }
    }
}