namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class Garlic : IVeggies
    {
        public override string ToString()
        {
            return "Garlic";
        }
    }
}