namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public interface ICheese 
    {
	    string ToString();
    }
}