namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public interface IClams
    {
        string ToString();
    }
}