namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public interface IDough
    {
        string ToString();
    }
}