namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public interface IPepperoni
    {
        string ToString();
    }
}