namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public interface ISauce
    {
        string ToString();
    }
}