namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public interface IVeggies
    {
        string ToString();
    }
}