namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class MarinaraSauce : ISauce
    {
        public override string ToString()
        {
            return "Marinara Sauce";
        }
    }
}