namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class MozzarellaCheese : ICheese
    {
        public override string ToString()
        {
            return "Shredded Mozzarella";
        }
    }
}