namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class Mushroom : IVeggies
    {
        public override string ToString()
        {
            return "Mushrooms";
        }
    }
}