namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class Onion : IVeggies
    {
        public override string ToString()
        {
            return "Onion";
        }
    }
}