namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    public class PlumTomatoSauce : ISauce
    {
        public override string ToString()
        {
            return "Tomato sauce with plum tomatoes";
        }
    }
}