namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class RedPepper : IVeggies
    {
        public override string ToString()
        {
            return "Red Pepper";
        }
    }
}