namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class ReggianoCheese : ICheese
    {
        public override string ToString()
        {
            return "Reggiano Cheese";
        }
    }
}