namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class SlicedPepperoni : IPepperoni
    {
        public override string ToString()
        {
            return "Sliced Pepperoni";
        }
    }
}