namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class Spinach : IVeggies
    {
        public override string ToString()
        {
            return "Spinach";
        }
    }
}