namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class ThickCrustDough : IDough
    {
        public override string ToString()
        {
            return "ThickCrust style extra thick crust dough";
        }
    }
}