namespace HeadFirst.DesignPatterns.Factory.AbstractFactory
{
    internal class ThinCrustDough : IDough
    {
        public override string ToString()
        {
            return "Thin Crust Dough";
        }
    }
}